--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,10 @@ KINDE_SITE_URL=http://localhost:3000
 KINDE_POST_LOGOUT_REDIRECT_URL=http://localhost:3000
 
 # Redirect URL after login
-KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/dashboard
+KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/workspace
+
+
+# Kinde Management API Configuration
+KINDE_DOMAIN=mybusiness.kinde.com
+KINDE_MANAGEMENT_CLIENT_ID=your_client_id_here
+KINDE_MANAGEMENT_CLIENT_SECRET=your_client_secret_here
