--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/workspace
 KINDE_DOMAIN=mybusiness.kinde.com
 KINDE_MANAGEMENT_CLIENT_ID=your_client_id_here
 KINDE_MANAGEMENT_CLIENT_SECRET=your_client_secret_here
+
+#arcjet
+ARCJET_KEY=ajkey_yourkey
