database setup and create channel and list all channel

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ KINDE_MANAGEMENT_CLIENT_SECRET=your_client_secret_here
 
 #arcjet
 ARCJET_KEY=ajkey_yourkey
+
+#database
+DATABASE_URL="postgres://user:password@localhost:5432/mydb?schema=public"
