--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@orpc/client": "1.9.2",
     "@orpc/server": "1.9.2",
     "@orpc/tanstack-query": "1.9.2",
+    "@prisma/client": "6.16.3",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -29,6 +30,7 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.548.0",
     "motion": "^12.23.24",
     "next": "15.5.4",
@@ -49,6 +51,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "prisma": "6.16.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
