--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@tiptap/starter-kit": "^3.10.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
+    "html-react-parser": "^5.2.7",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.548.0",
     "motion": "^12.23.24",
@@ -55,6 +57,7 @@
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.19",
     "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@types/dompurify": "^3.2.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
