--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ ARCJET_KEY=ajkey_yourkey
 
 #database
 DATABASE_URL="postgres://user:password@localhost:5432/mydb?schema=public"
+
+#uploadthing
+UPLOADTHING_TOKEN=your-uploadthing-token
