--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/react": "^2.0.89",
     "@arcjet/inspect": "1.0.0-beta.13",
     "@arcjet/next": "1.0.0-beta.13",
     "@hookform/resolvers": "^5.2.2",
     "@kinde-oss/kinde-auth-nextjs": "^2.10.0",
     "@kinde/management-api-js": "^0.14.0",
+    "@openrouter/ai-sdk-provider": "^1.2.1",
     "@orpc/client": "1.9.2",
     "@orpc/server": "1.9.2",
     "@orpc/tanstack-query": "1.9.2",
@@ -35,7 +37,9 @@
     "@tiptap/pm": "^3.10.1",
     "@tiptap/react": "^3.10.1",
     "@tiptap/starter-kit": "^3.10.1",
+    "@tiptap/static-renderer": "^3.10.4",
     "@uploadthing/react": "^7.3.3",
+    "ai": "^5.0.89",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.3.0",
